syntax = "proto3";

package io.aggregator.action;

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/aggregator/entity/day_entity.proto";

option java_outer_classname = "DayToPaymentService";

service DayToPayment {
  option (akkaserverless.codegen) = {
    action: {}
  };

  rpc OnDayAggregated(entity.DayAggregated) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "day"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "day"
    };
  }
}
