syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_merchant_key.proto";

package io.aggregator.entity;

option java_outer_classname = "DayEntity";

message DayActivated {
  MerchantKey merchant_key = 1;
  int64 epoch_day = 2;
}

message HourAdded {
  MerchantKey merchant_key = 1;
  int64 epoch_hour = 2;
}

message DayAggregated {
  MerchantKey merchant_key = 1;
  string payment_id = 2;
  int64 epoch_day = 3;
  repeated MoneyMovement money_movements = 4;
  google.protobuf.Timestamp last_update_timestamp = 5;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  google.protobuf.Timestamp aggregation_completed_timestamp = 7;
}

message ActiveHourAggregated {
  MerchantKey merchant_key = 1;
  string payment_id = 2;
  int64 epoch_hour = 3;
  repeated MoneyMovement money_movements = 4;
  google.protobuf.Timestamp last_update_timestamp = 5;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
}

message DayAggregationRequested {
  MerchantKey merchant_key = 1;
  string payment_id = 2;
  int64 epoch_day = 3;
  repeated int64 epoch_hours = 4;
  google.protobuf.Timestamp aggregate_request_timestamp = 5;
  google.protobuf.Timestamp aggregation_started_timestamp = 6;
}

message DayState {
  MerchantKey merchant_key = 1;
  int64 epoch_day = 2;
  repeated ActiveHour activeHours = 3;
  repeated AggregateDay aggregateDays = 4;
}

message AggregateDay {
  repeated ActiveHour activeHours = 1;
  google.protobuf.Timestamp aggregate_request_timestamp = 2;
  google.protobuf.Timestamp aggregation_started_timestamp = 3;
  string payment_id = 4;
}

message ActiveHour {
  int64 epoch_hour = 1;
  repeated MoneyMovement money_movements = 2;
  google.protobuf.Timestamp last_update_timestamp = 3;
  google.protobuf.Timestamp aggregate_request_timestamp = 4;
  string payment_id = 5;
}
